--- a/my-react-app/src/components/Home/Home.css
+++ b/my-react-app/src/components/Home/Home.css
@@ -56,9 +56,10 @@
   width: 15rem;
   height: auto;
   position: absolute;
-  left: 40%;
+  left: 50%;
   top: 25%;
-  z-index: 1;
+  transform: translateX(-50%);
+  z-index: 10;
 }
 
 .main-container {
